@@ -5,9 +5,10 @@
     <name>BookShopOnline</name>
     <artifactId>BookShopOnline</artifactId>
     <groupId>com.BookShop</groupId>
+     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
-    <version>1.0.0-SNAPSHOT</version>
+   
 
     <description>
     Progetto per il corso di Ingegneria del Software e Progettazione Web,
@@ -100,326 +101,127 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <main.class>com.example.test.*</main.class>
         <java.version>11</java.version>
-        <junit.jupiter.version>5.3.1</junit.jupiter.version>
-        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
-        <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+
+        <junit>5.6.2</junit>
+        
+        <!-- Plugin versions -->
+        <maven.shade>3.2.2</maven.shade>
+        <maven.clean>3.1.0</maven.clean>
+        <maven.resources>3.1.0</maven.resources>
+        <maven.compiler>3.8.1</maven.compiler>
+        <maven.surefire>3.0.0-M5</maven.surefire>
+        <maven.jar>3.2.0</maven.jar>
+        <maven.install>3.0.0-M1</maven.install>
         <sonar.projectKey>Evoi95_BSO-Maven</sonar.projectKey>
   		<sonar.organization>evoi95</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
-    
 
     <dependencies>
-    	<dependency>
-      		<groupId>org.openjfx</groupId>
-      		<artifactId>javafx-archetype-fxml</artifactId>
-      		<version>0.0.3</version>
-  		</dependency>
-  		<dependency>
-      		<groupId>org.openjfx</groupId>
-     		<artifactId>javafx-archetype-simple</artifactId>
-    		<version>0.0.3</version>
-  		</dependency>
-		<dependency>
-    		<groupId>org.jacoco</groupId>
-    		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.8.2</version>
-    		<exclusions>
-    			<exclusion>
-    				<groupId>org.codehaus.plexus</groupId>
-    				<artifactId>plexus-container-default</artifactId>
-    			</exclusion>
-    		</exclusions>
-		</dependency>
+        <!-- Dependencies -->
     
-        
+    
+        <!-- Testing dependencies-->
         <dependency>
-        	<groupId>mysql</groupId>
-        	<artifactId>mysql-connector-java</artifactId>
-        	<version>8.0.22</version>
-        	<type>jar</type>
-			<scope>runtime</scope>
- 		</dependency>
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.openjfx</groupId>
+        	<artifactId>javafx-base</artifactId>
+        	<version>11.0.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.openjfx</groupId>
+        	<artifactId>javafx-controls</artifactId>
+        	<version>11.0.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.openjfx</groupId>
+        	<artifactId>javafx-graphics</artifactId>
+        	<version>11.0.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.openjfx</groupId>
+        	<artifactId>javafx-fxml</artifactId>
+        	<version>11.0.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.mybatis</groupId>
+        	<artifactId>mybatis</artifactId>
+        	<version>3.4.5</version>
+        </dependency>
         <dependency>
         	<groupId>com.itextpdf</groupId>
         	<artifactId>itextpdf</artifactId>
         	<version>5.5.9</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
-		<dependency>
-    		<groupId>org.openjfx</groupId>
-    		<artifactId>javafx-fxml</artifactId>
-		    <version>11.0.2</version>
-		</dependency>
-         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
-        <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <version>3.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.6.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-java</artifactId>
-      <version>0.9.11</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-archiver</artifactId>
-      <version>3.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-exec</artifactId>
-      <version>1.3</version>
-    </dependency>
-<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.6</version>
-</dependency>
-
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <version>5.3.1</version>
-    <scope>test</scope>
-</dependency>
-
-
-<dependency>
-   <groupId>org.mybatis</groupId>
-   <artifactId>mybatis</artifactId>
-   <version>3.4.5</version>
-</dependency>
-
-<dependency>
-    <groupId>org.assertj</groupId>
-    <artifactId>assertj-core</artifactId>
-    <version>3.9.1</version>
-</dependency>
- 
-    <dependency>
-      <groupId>org.apache.maven.plugin-testing</groupId>
-      <artifactId>maven-plugin-testing-harness</artifactId>
-      <version>3.3.0</version>
-      <scope>test</scope>
-    </dependency>
-    
-   <!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit -->
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>3.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-compat</artifactId>
-      <version>3.6.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-aether-provider</artifactId>
-      <version>3.3.9</version>
-      <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>org.eclipse.aether</groupId>
-          <artifactId>aether-transport-http</artifactId>
-          <version>1.1.0</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.eclipse.aether</groupId>
-          <artifactId>aether-transport-file</artifactId>
-          <version>1.1.0</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.eclipse.aether</groupId>
-          <artifactId>aether-connector-basic</artifactId>
-          <version>1.1.0</version>
-          <scope>test</scope>
-      </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-interpolation</artifactId>
-      <version>1.25</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>2.24.5</version>
-      <scope>test</scope>
-    </dependency>
-        <dependency>
-        <groupId>org.junit.vintage</groupId>
-        <artifactId>junit-vintage-engine</artifactId>
-        <version>5.3.1</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>4.0.1</version>
-    <scope>provided</scope>
-    
-    
-</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
-	<dependency>
-  	  <groupId>org.openjfx</groupId>
-   		 <artifactId>javafx-controls</artifactId>
-  	  <version>11.0.2</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
-<dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-graphics</artifactId>
-    <version>11.0.2</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
-
-<dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-base</artifactId>
-    <version>11.0.2</version>
-</dependency>
-
-
-	
-    <dependency>
-    	<groupId>org.testfx</groupId>
-    	<artifactId>testfx-junit5</artifactId>
-    	<version>4.0.16-alpha</version>
-    </dependency>
-
     </dependencies>
     
-    
-
     <build>
         <plugins>
-       
-    		<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
             </plugin>
-            
-
-           
-        <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-jar-plugin</artifactId>
-             <version>${maven.jar.plugin.version}</version>
-              <configuration>
-                  <archive>
-	                  <manifest>
-    	                  <addClasspath>true</addClasspath>
-        	              <classpathPrefix>lib/</classpathPrefix>
-                          <mainClass>${main.class}</mainClass>
-                      </manifest>
-                 </archive>
-             </configuration>
-        </plugin>
-        
-		<plugin>
-         	<groupId>org.sonarsource.scanner.maven</groupId>
-         	<artifactId>sonar-maven-plugin</artifactId>
-         	<version>3.7.0.1746</version>
-       	</plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-  			<version>2.19.1</version>
- 			<configuration>
- 			    <workingDirectory>${project.build.directory}/test/*</workingDirectory>
-                <options>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
-                        <option>--add-exports</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
-                        <option>--add-exports</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
-                        <option>--add-exports</option>
-                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
-                        <option>--add-exports</option>
-                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
-                        <option>--add-exports</option>
-                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
-                    </options>
-                </configuration>
-	
-        </plugin>
-            
-            
-            
-          	<plugin> 
-				<groupId>org.apache.tomcat.maven</groupId> 
-				<artifactId>tomcat7-maven-plugin</artifactId> 
-				<version>2.2</version> 
-				<configuration> 
-					<port>8080</port> 
-				</configuration> 
-			</plugin>
-
-
-          	<plugin>
-          		<groupId>org.jacoco</groupId>
-      		  <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.2</version>
-        <executions>
-            <execution>
-                <goals>
-                    <goal>prepare-agent</goal>
-                </goals>
-            </execution>
-            <!-- attached to Maven test phase -->
-            <execution>
-                <id>report</id>
-                <phase>test</phase>
-                <goals>
-                    <goal>report</goal>
-                </goals>
-            </execution>
-        </executions>
-          		
-          	</plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven.shade}</version>
+                <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                    <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>com.example.test</mainClass>
+                        </transformer>
+                    </transformers>
+                    </configuration>
+                </execution>
+                </executions>
+            </plugin>
         </plugins>
-        
-
     </build>
 </project>
